--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -6,7 +6,7 @@ print_info() {
 
     info "OS" distro
     info "Shell" shell
-    info "Terminal" term
+    # info "Terminal" term
     prin
     info "CPU" cpu
     info "Memory" memory
