--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -26,13 +26,21 @@ unbind %
 # 自动窗口重新编号
 set -g renumber-windows on
 
-# 自定义状态栏
-set -g status-right 'Session: #S | Window: #I | Pane: #P | %d %b %Y %H:%M'
-set -g status-interval 60  # 状态栏刷新间隔
-
 # 使用快捷键r重新读取配置文件
 bind r source-file ~/.tmux.conf\; display "Reloaded!"
 
 # 设置Window和Pane开始编号为1
 set-option -g base-index 1
 set-window-option -g pane-base-index 1
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+# 自定义状态栏
+# set -g status-right 'Session: #S | Window: #I | Pane: #P | %d %b %Y %H:%M'
+# set -g status-interval 60  # 状态栏刷新间隔
+set -g @plugin 'erikw/tmux-powerline'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
