--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -33,14 +33,13 @@ bind r source-file ~/.tmux.conf\; display "Reloaded!"
 set-option -g base-index 1
 set-window-option -g pane-base-index 1
 
+
+run-shell "hostname | grep -q 'Y9000P' && tmux source-file ~/.tmux.Y9000P.conf || tmux source-file ~/.tmux.other.conf"
+
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-
-# 自定义状态栏
-# set -g status-right 'Session: #S | Window: #I | Pane: #P | %d %b %Y %H:%M'
-# set -g status-interval 60  # 状态栏刷新间隔
-set -g @plugin 'erikw/tmux-powerline'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
