--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -33,13 +33,18 @@ bind r source-file ~/.tmux.conf\; display "Reloaded!"
 set-option -g base-index 1
 set-window-option -g pane-base-index 1
 
+# powerline位置
+set-option -g status-position top
 
-run-shell "hostname | grep -q 'Y9000P' && tmux source-file ~/.tmux.Y9000P.conf || tmux source-file ~/.tmux.other.conf"
+# run-shell "hostname | grep -q 'Y9000P' && tmux source-file ~/.tmux.Y9000P.conf || tmux source-file ~/.tmux.other.conf"
+# source-file ~/.tmux.other.conf
 
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'nordtheme/tmux'
+set -g @plugin 'ofirgall/tmux-window-name'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
