--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -12,10 +12,10 @@ bind -r C-n next-window
 
 # pane间切换
 # M是指alt键
-# bind -n M-h select-pane -L
-# bind -n M-j select-pane -D
-# bind -n M-k select-pane -U
-# bind -n M-l select-pane -R
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
 
 
 # window分割
