--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -10,6 +10,12 @@ set -g prefix 'C-j'
 bind -r C-p previous-window
 bind -r C-n next-window
 
+# window分割
+bind | split-window -h  # 水平分割窗口
+bind - split-window -v  # 垂直分割窗口
+unbind '"'
+unbind %
+
 # pane间切换
 # M是指alt键
 bind -n M-h select-pane -L
@@ -17,12 +23,9 @@ bind -n M-j select-pane -D
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
 
-
-# window分割
-bind | split-window -h  # 水平分割窗口
-bind - split-window -v  # 垂直分割窗口
-unbind '"'
-unbind %
+# 最大化pane
+unbind z
+bind m resize-pane -Z
 
 # 自动窗口重新编号
 set -g renumber-windows on
@@ -36,10 +39,6 @@ set-window-option -g pane-base-index 1
 
 # powerline位置
 set-option -g status-position top
-
-# run-shell "hostname | grep -q 'Y9000P' && tmux source-file ~/.tmux.Y9000P.conf || tmux source-file ~/.tmux.other.conf"
-# source-file ~/.tmux.other.conf
-
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
