--- a/neofetch/config.conf
+++ b/neofetch/config.conf
@@ -1,48 +1,21 @@
-# See this wiki page for more info:
-# https://github.com/dylanaraps/neofetch/wiki/Customizing-Info
+# https://github.com/chick2d/neofetch-themes
+# Made by https://github.com/chatsagnik
+
 print_info() {
-    info title
-    info underline
-
-    info "OS" distro
-    info "Shell" shell
-    # info "Terminal" term
-    prin
-    info "CPU" cpu
-    info "Memory" memory
-    info "Battery" battery
-    info "Local IP" local_ip
-    info "Public IP" public_ip
-    prin
-    #info "Host" model
-    #info "Kernel" kernel
-    #info "Resolution" resolution
-    #info "DE" de
-    info "WM" wm
-    #info "WM Theme" wm_theme
-    #info "Theme" theme
-    #info "Icons" icons
-    info "Terminal Font" term_font
-    info "Packages" packages
-    info "Uptime" uptime
-    #info "GPU" gpu
-
-    # info "GPU Driver" gpu_driver  # Linux/macOS only
-    # info "CPU Usage" cpu_usage
-    # info "Disk" disk
-    # info "Font" font
-    # info "Song" song
-    # [[ "$player" ]] && prin "Music Player" "$player"
-    # info "Users" users
-    # info "Locale" locale  # This only works on glibc systems.
-
-
-    info cols
+    prin " "
+    info "$(color 1) OS  " distro
+    info "$(color 2) VER" kernel
+    info "$(color 3)󰥔 UP " uptime
+    info "$(color 4)󰏗 PKG" packages
+    prin "$(color 5) CPU:	$(color fg)Intel i9-12900H (20) @ 4.900GHz" # Hardcoded for fast startup
+    prin "$(color 6) GPU:	$(color fg)NVIDIA GeForce RTX 3060" # Hardcoded for fast startup
+    info "$(color 7)󰍛 MEM" memory
+    prin "$(color 1) $(color 2) $(color 3) $(color 4) $(color 5) $(color 6) $(color 7) $(color 8)"
 }
 
 
-# Title
 
+# Title
 
 
 # Hide/Show Fully qualified domain name.
@@ -121,7 +94,7 @@ uptime_shorthand="on"
 # Example:
 # on:   '1801MiB / 7881MiB (22%)'
 # off:  '1801MiB / 7881MiB'
-memory_percent="on"
+memory_percent="off"
 
 # Change memory output unit.
 #
@@ -254,7 +227,7 @@ cpu_cores="logical"
 # C:   'Intel i7-6500U (4) @ 3.1GHz [27.2°C]'
 # F:   'Intel i7-6500U (4) @ 3.1GHz [82.0°F]'
 # off: 'Intel i7-6500U (4) @ 3.1GHz'
-cpu_temp="C"
+cpu_temp="off"
 
 
 # GPU
@@ -288,7 +261,7 @@ gpu_brand="on"
 #
 # integrated:
 #   GPU1: Intel Integrated Graphics
-gpu_type="all"
+gpu_type="dedicated"
 
 
 # Resolution
@@ -303,7 +276,7 @@ gpu_type="all"
 # Example:
 # on:  '1920x1080 @ 60Hz'
 # off: '1920x1080'
-refresh_rate="on"
+refresh_rate="off"
 
 
 # Gtk Theme / Icons / Font
@@ -483,7 +456,7 @@ disk_percent="on"
 # xmms2d
 # xnoise
 # yarock
-music_player="auto"
+music_player="mpd"
 
 # Format to display song information.
 #
@@ -568,7 +541,7 @@ underline_char="-"
 # Example:
 # separator="->":   'Shell-> bash'
 # separator=" =":   'WM = dwm'
-separator="->"
+separator=":"
 
 
 # Color Blocks
@@ -684,10 +657,10 @@ bar_color_total="distro"
 # infobar: 'info [---=======]'
 # barinfo: '[---=======] info'
 # off:     'info'
-cpu_display="on"
-memory_display="on"
-battery_display="on"
-disk_display="on"
+cpu_display="off"
+memory_display="off"
+battery_display="off"
+disk_display="off"
 
 
 # Backend Settings
@@ -765,7 +738,7 @@ image_source="auto"
 #       Slackware, SunOS, LinuxLite, OpenSUSE, Raspbian,
 #       postmarketOS, and Void have a smaller logo variant.
 #       Use '{distro name}_small' to use the small variants.
-ascii_distro="auto"
+ascii_distro="LinuxMint_small"
 
 # Ascii Colors
 #
@@ -855,15 +828,4 @@ xoffset=0
 #
 # Default: ''
 # Values:  'color', 'blue'
-# Flag:    --bg_color
-background_color=
-
-
-# Misc Options
-
-# Stdout mode
-# Turn off all colors and disables image backend (ASCII/Image).
-# Useful for piping into another command.
-# Default: 'off'
-# Values: 'on', 'off'
-stdout="off"
+# Flag:    --b
