--- a/neofetch-mint/config.conf
+++ b/neofetch-mint/config.conf
@@ -3,7 +3,7 @@
 
 print_info() {
     prin " "
-    info "$(color 1) OS  " distro
+    info "$(color 1)󰣭 OS  " distro
     info "$(color 2) VER" kernel
     info "$(color 3)󰥔 UP " uptime
     info "$(color 4)󰏗 PKG" packages
