✨ feat: wezterm tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,11 @@
 # 鼠标支持
 set -g mouse on
 
+# fcitx
+set-environment -g 'GTK_IM_MODULE' 'fcitx'
+set-environment -g 'QT_IM_MODULE' 'fcitx'
+set-environment -g 'XMODIFIERS' '@im=fcitx'
+
 # copy-mode vim绑定
 # J/K 翻页
 set -g mode-keys vi
@@ -19,6 +24,12 @@ bind | split-window -h  # 水平分割窗口
 bind - split-window -v  # 垂直分割窗口
 unbind '"'
 unbind %
+
+# 关闭窗口
+unbind x
+bind x kill-pane
+unbind &
+bind & kill-window
 
 # pane间切换
 # M是指alt键
