--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -25,6 +25,9 @@ bind - split-window -v  # 垂直分割窗口
 unbind '"'
 unbind %
 
+set -g window-style 'bg=default'
+set -g window-active-style 'bg=black'
+
 # 关闭窗口
 unbind x
 bind x kill-pane
