--- a/helix/config.toml.template
+++ b/helix/config.toml.template
@@ -1,4 +1,4 @@
-theme = "gruvbox_dark_soft"
+theme = "dracula"
 
 [editor]
 line-number = "relative"
@@ -27,6 +27,7 @@ mode.select = " SEL"
 
 [editor.file-picker]
 hidden = false
+git-ignore = false
 
 [editor.search]
 wrap-around = true
