--- a/wezterm/.wezterm.lua.template
+++ b/wezterm/.wezterm.lua.template
@@ -9,12 +9,13 @@ if wezterm.config_builder then
 end
 
 -- 基本设置
-config.color_scheme = "Dracula (Official)"
+config.color_scheme = "Gruvbox dark, soft (base16)"
 config.font = wezterm.font_with_fallback {
-	{ family = "0xProto Nerd Font",   scale = 1.2, weight = 'Light' },
+	{ family = "0xProto Nerd Font",      scale = 1.2, weight = 'Light' },
+	{ family = "SourceHanSansCN-Normal", scale = 1.4 },
+	-- { family = "Sarasa Term SC Nerd", scale = 1.4 },
 	-- { family = "Fira Code Nerd Font", scale = 1.2 },
 	-- { family = "Ubuntu Mono Nerd Font", weight = 'Light', scale = 1.4 },
-	{ family = "Sarasa Term SC Nerd", scale = 1.4 },
 }
 config.line_height = 1.2
 config.window_padding = {
